--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "axios": "^1.2.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "got": "^12.5.3",
     "mysql2": "^3.0.1",
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
