--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DB_NAME='workoutBuddy_db'
 DB_USER='root'
-DB_PASSWORD='password1234'
+DB_PASSWORD='Bobbymac123'
 API_NINJA = '22868d7c93msh6407089c3182b08p1d99c1jsnbb89314275a5'
