--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "dependencies": {
     "axios": "^1.2.6",
+    "connect-sqlite3": "^0.9.13",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.7",
+    "express-session": "^1.17.3",
     "got": "^12.5.3",
     "mysql2": "^3.0.1",
     "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4"
   },
